--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
     <header>
         <div class="navbar">
-            <div class="logo">AEA</div>
+            <div class="logo">ã૯ã </div>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="#">Experience</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -24,45 +23,59 @@
     </header>
 
     <main class="hero">
-        <img src="./avatar.png" alt="Avatar" class="avatar" />
-        <h1>I do code and <br> make content <span class="gradient-text">about it!</span></h1>
-        <p>I am a seasoned full-stack software engineer with over<br>8 years of professional experience, specializing in
-            backend development.</p>
-        <div class="buttons">
-            <button class="btn primary">Get In Touch</button>
-            <button class="btn outline">Download CV</button>
-        </div>
+        <img src="./images/Avatarka.jpg" alt="Avatar" class="avatar" style="width: 250px;" />
+        <h1> I create Code and <br> create content <span class="gradient-text">about it!</span></h1>
+        <p>I am Erkebulan, an experienced software engineer. <br>
+            I have 1 year of professional experience in front-end programming.</p>
 
         <section class="experience">
             <h3>EXPERIENCE WITH</h3>
             <div class="icons">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
-                    alt="JS" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg"
-                    alt="Next.js" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" />
+                <a href="https://code.visualstudio.com/"><img
+                        src="https://ozgurgunes.gallerycdn.vsassets.io/extensions/ozgurgunes/vscode-late-night-theme/0.3.0/1602484779972/Microsoft.VisualStudio.Services.Icons.Default"
+                        alt="visual sutusy code"></a>
+                <a href="https://www.w3schools.com/html/html_intro.asp"> <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
+                        alt="HTML"></a>
+                <a href="https://www.w3schools.com/css/css_intro.asp"><img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS"></a>
+                <a href="https://www.w3schools.com/js/default.asp"><img
+                        src="https://avatars.mds.yandex.net/i?id=c28a7b7ef51217f5e15bd80c2a5f96262d73cf9c-11444350-images-thumbs&n=13"
+                        alt="JS"></a>
+
+                <a href="https://github.com/"><img style="background-color: red;" src="./images/Screenshot_2.png"
+                        alt="github"></a>
             </div>
         </section>
     </main>
     <section class="projects">
-        <h2 class="section-title orange">PROJECTS</h2>
+        <h2 class="section-title orange">Video tutorial</h2>
         <div class="project-list">
             <div class="project-card">
-                <img src="./i.webp"
-                    alt="HTML Project">
+                <a
+                    href="https://www.youtube.com/watch?v=9dUhZq9dkHM&list=PLpDyZ4xZcDg_aAzP6pDD1PRsYCSdheveS&index=1&pp=iAQB"><img
+                        src="images/HTML.webp" alt="HTML Project"></a>
                 <div class="project-info">
                     <p>Click here to visit</p>
                     <h3>HTML TUTORIAL</h3>
                 </div>
             </div>
             <div class="project-card">
-                <img src="./i (1).webp"
-                    alt="CSS Project">
+                <a
+                    href="https://www.youtube.com/watch?v=KPPhQ0F-SDY&list=PLpDyZ4xZcDg_gyII__1jtnE2FEgqpfJU8&index=1&pp=iAQB"><img
+                        src="images/CSS.webp " alt="CSS Project"></a>
                 <div class="project-info">
                     <p>Click here to visit</p>
                     <h3>CSS TUTORIAL</h3>
+                </div>
+            </div>
+            <div class="project-card">
+                <a
+                    href="https://www.youtube.com/watch?v=zJuDsji3IbE&list=PLNS3PujVHR-ay0HpqbsPWccgEhJZk6K9u&index=1&pp=iAQB"><img
+                        src="./images/JS.webp" alt="JS Project"></a>
+                <div class="project-info">
+                    <p>Click here to visit</p>
+                    <h3>JS TUTORIAL</h3>
                 </div>
             </div>
         </div>
@@ -71,34 +84,37 @@
         <h2 class="section-title blue">EXPERIENCE</h2>
 
         <div class="experience-item">
-            <h3><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" width="20">
-                Lead Software Engineer at Google</h3>
-            <span>Nov 2019 – Present</span>
-            <p>At Google, I played a pivotal role in developing solutions for core search algorithms and improving user
-                experience for millions.</p>
+            <h3><img src="https://ozgurgunes.gallerycdn.vsassets.io/extensions/ozgurgunes/vscode-late-night-theme/0.3.0/1602484779972/Microsoft.VisualStudio.Services.Icons.Default"
+                    width="40">
+                Lead Softw are Engineer at Visual Studio Code</h3>
+            <span>Nov 2015–Present</span>
+            <p>Visual Studio Code (VS Code) - a code editor developed by Microsoft for Windows, Linux, and macOS. It is
+                a "lightweight" code editor for interplatform web and cloud application development.</p>
         </div>
 
         <div class="experience-item">
-            <h3><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apple/apple-original.svg" width="20">
-                Junior Software Engineer at Apple</h3>
-            <span>Jan 2018 – Dec 2017</span>
-            <p>Worked as a software architect, designing scalable systems and critical software infrastructure for
-                Apple.</p>
+            <h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Netlify_logo_%282%29.svg/250px-Netlify_logo_%282%29.svg.png"
+                    width="80">
+                Netlify is the place that stores these codes</h3>
+            <span>Nov 2014–Present</span>
+            <p>Netlify is the first remote cloud computing company that offers a development platform for web
+                applications and dynamic websites, including creation, deployment, and server-free services.</p>
         </div>
 
         <div class="experience-item">
-            <h3><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/meta/meta-original.svg" width="20">
-                Software Engineer at Meta</h3>
-            <span>Jan 2017 – Oct 2019</span>
-            <p>Developed backend systems and large-scale processing tools for Metas social platform, ensuring high
-                performance.</p>
+            <h3><img src="./images/Screenshot_2.png" width="40px" height="40px">
+                Software Engineer at Github</h3>
+            <span>Nov 2008–Present</span>
+            <p>GitHub, one of the global companies based in the United States of America, provides hosting for software
+                development and version management using Git.</p>
         </div>
     </section>
-    <section class="contact">
+    <footer class="contact">
         <h2 class="section-title">Contact</h2>
-        <p>Seasoned Full Stack Software Engineer with over 8 years of hands-on experience in designing scalable web
+        <p>Seasoned Full Stack Software Engineer with over 1 years of hands-on experience in designing scalable web
             solutions.</p>
         <a href="erkebulanamanjolov08@gmail.com">amanjoloverkebulan08@gmail.com</a>
-    </section>
+    </footer>
 </body>
+
 </html>
